# Coins

./: CMakeLists.txt  README.md  build.sh  build_run.sh  quickbuild.sh
data/: CMakeLists.txt  coins.desktop
data/styles/: style.css
src/: CMakeLists.txt  Coins.vala  MainWindow.vala  config.vala  config.vala.cmake
src/Api/: CoinMarketCap.vala
